squashing bugs

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 
   /* button component */
   .btn {
-    @apply flex gap-4 items-center justify-center cursor-pointer p-3 rounded-md bg-[#B2BEB5] transition-all active:scale-95 text-[#556962] mx-auto;
+    @apply flex gap-4 items-center justify-center cursor-pointer p-3 rounded-md hover:text-white bg-[#B2BEB5] transition-all active:scale-95 text-[#556962] mx-auto;
   }
 
   .btn-ping {
@@ -62,7 +62,7 @@ body {
 
   /* about section */
   .grid-container {
-    @apply w-full h-full border border-black-300 bg-black-200 rounded-lg sm:p-7 p-4 flex flex-col gap-5;
+    @apply w-full h-full border border-teal-950 bg-teal-950 rounded-lg sm:p-7 p-4 flex flex-col gap-5;
   }
 
   .grid-headtext {
